# cplusplus_building

01/: README.md  build_g++.sh  build_gcc.sh  helloworld  helloworld.cpp  hellworld
02/: README.md  build_g++.sh  main  opt_share.h
03/: README.md  main.cpp
04/: CMakeLists.txt  README.md  armhf-linux-gnu.toolchain.cmake  opt_share.cpp
